--- a/src/app/components/store/all-stores/all-stores.component.html
+++ b/src/app/components/store/all-stores/all-stores.component.html
@@ -154,7 +154,7 @@
                        }}</span></a
                      >
                      <span class="text-secondary font-weight-bold">
-                       @{{ row.owner_name }}</span
+                       {{ row.owner_name }}</span
                      >
                    </div>
                  </div>
