--- a/src/app/components/status-manager/reject-list/reject-list.component.html
+++ b/src/app/components/status-manager/reject-list/reject-list.component.html
@@ -4,7 +4,7 @@
     <section class="users-list-wrapper">
       <!-- users filter start -->
       <div class="card">
-        <h5 class="card-header font-weight-bold text-primary display-4">All Category</h5>
+        <h5 class="card-header font-weight-bold text-primary display-4">Refused Trabsactions</h5>
         <div class="card-body">
           <div class="row">
             <div class="col-md-6 col-12">
