--- a/src/app/components/status-manager/pending-list/pending-list.component.html
+++ b/src/app/components/status-manager/pending-list/pending-list.component.html
@@ -4,7 +4,7 @@
     <section class="users-list-wrapper">
       <!-- users filter start -->
       <div class="card">
-        <h5 class="card-header font-weight-bold text-primary display-4">All Transactions</h5>
+        <h5 class="card-header font-weight-bold text-primary display-4">Pending Trabsactionas</h5>
         <div class="card-body">
 
           <div class="row">
