--- a/src/@core/scss/base/plugins/charts/chart-apex.scss
+++ b/src/@core/scss/base/plugins/charts/chart-apex.scss
@@ -97,7 +97,7 @@
     }
     .apexcharts-legend-text {
       margin-left: 0.5rem;
-      color: $body-color !important;
+      color: $white;
       font-size: 1rem !important;
     }
   }
