--- a/src/app/components/order/order-list/order-list.component.html
+++ b/src/app/components/order/order-list/order-list.component.html
@@ -327,6 +327,14 @@
     </section>
   </div>
 </div>
+ <!-- ///////////////////////////////loader//////////////////// -->
+ <div *ngIf="loaders" id="loader-wrapper">
+  <div id="loader"></div>
+  <span *ngIf="loaders" class="loader"></span>
+ <div class="loader-section section-left"></div>
+ <div class="loader-section section-right"></div>
+</div>
+
 
 
 
