--- a/src/app/components/store/new-store-request/new-store-request.component.html
+++ b/src/app/components/store/new-store-request/new-store-request.component.html
@@ -60,33 +60,20 @@
           [footerHeight]="50"
           [scrollbarH]="true"
         >
+        <!-- Id   -->
         <ngx-datatable-column name="ID" prop="id" [width]="80">
-          <ng-template let-id="value" let-isDeleted="row.isDeleted"  let-isVerified="row.verified"  ngx-datatable-cell-template
-       
-          >
+          <ng-template let-id="value" let-isDeleted="row.isDeleted"  let-isVerified="row.verified"  ngx-datatable-cell-template>
             <div
               class="badge badge-pill badge-glow px-3"
-              [ngClass]="{
-                'badge-danger': isDeleted == true,
-                'badge-warning': isVerified == false,
-                '': isDeleted == false
-              }"
-            >
+              [ngClass]="{'badge-danger': isDeleted == true,'badge-warning': isVerified == false,'': isDeleted == false}" >
               {{ id }}
             </div>
           </ng-template>
-        </ngx-datatable-column>    
+        </ngx-datatable-column>
 
-          <ngx-datatable-column
-            name="Store Name"
-            prop="store_name"
-            [width]="200"
-          >
-            <ng-template
-              let-row="row"
-              let-name="value"
-              ngx-datatable-cell-template
-            >
+        <!-- Store Name -->
+          <ngx-datatable-column name="Store Name" prop="store_name"  [width]="200" >
+            <ng-template let-row="row" let-name="value" ngx-datatable-cell-template>
               <div class="d-flex align-items-center">
                 <div class="mr-2">
                   <ngx-avatar
@@ -106,12 +93,14 @@
                     }}</span></a
                   >
                   <span class="text-secondary font-weight-bold">
-                    @{{ row.owner_name }}</span
+                    {{ row.owner_name }}</span
                   >
                 </div>
               </div>
             </ng-template>
           </ngx-datatable-column>
+          
+         <!-- Store  phone -->
           <ngx-datatable-column name="phone" prop="store_phone" [width]="100">
             <ng-template let-phone="value" ngx-datatable-cell-template>
               <div
@@ -125,11 +114,15 @@
               </div>
             </ng-template>
           </ngx-datatable-column>
+
+          <!-- Email -->
           <ngx-datatable-column
             name="Email"
             prop="email"
             [width]="200"
           ></ngx-datatable-column>
+
+          <!-- Address -->
           <ngx-datatable-column
             name="Address"
             prop="store_address"
@@ -149,6 +142,7 @@
             </ng-template>
           </ngx-datatable-column>
 
+          <!-- categories -->
           <ngx-datatable-column
             name="categories"
             prop="categories
@@ -168,13 +162,13 @@
                       'icon-gift  text-warning ': item !== ''
                     }"
                   ></i>
-                  {{ item.name }}
+                  {{ item.name_en }} -{{ item.name_ar }}
                 </div>
               </div>
             </ng-template>
           </ngx-datatable-column>
 
-    
+          <!-- store_url -->
           <ngx-datatable-column name="URL" prop="store_url" [width]="150">
             <ng-template let-url="value" ngx-datatable-cell-template>
               <div
@@ -188,6 +182,8 @@
               </div>
             </ng-template>
           </ngx-datatable-column>
+
+          <!-- status -->
           <ngx-datatable-column
             name="Mobile Verified"
             prop="mobile_verified"
@@ -205,6 +201,8 @@
               </div>
             </ng-template>
           </ngx-datatable-column>
+
+          <!-- Deleted -->
           <ngx-datatable-column name="Deleted" prop="isDeleted" [width]="100">
                <ng-template let-sus="value" ngx-datatable-cell-template>
                  <div
@@ -217,9 +215,9 @@
                    {{ sus }}
                  </div>
                </ng-template>
-             </ngx-datatable-column>
+          </ngx-datatable-column>
 
-
+          <!-- verified -->
           <ngx-datatable-column name="verified" prop="verified" [width]="100">
             <ng-template let-sus="value" ngx-datatable-cell-template>
               <div
@@ -234,6 +232,7 @@
             </ng-template>
           </ngx-datatable-column>
 
+          <!-- Actions -->
           <ngx-datatable-column name="Actions" [width]="100" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row">
               <div ngbDropdown container="body">
